Replace jaxb library usage for base64 encoding